--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/modules.xml
+.idea/vcs.xml
+.idea/deploymentTargetDropDown.xml
+.idea/misc.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
