--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ captures/
 .idea/libraries
 .idea/caches
 
+.idea/deploymentTargetDropDown
+.idea/misc
+
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
