--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.2'
 }
