Início da implementação da edição de perfil

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.ufc.smd.diario">
 
-<!-- android:theme="@style/Theme.Diariosono" -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_diariosono"
@@ -15,11 +14,18 @@
             android:name=".activity.PrincipalActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.RegistroEventoActivity"
-            android:exported="false" />
-        <activity
             android:name=".activity.GraficoActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.NovoUsuarioActivity"
+            android:exported="false"
+            android:theme="@style/ActionBarTheme"
+            android:label="Cadastro"/>
+        <activity
+            android:name=".activity.EditarPerfilActivity"
+            android:exported="false"
+            android:theme="@style/ActionBarTheme"
+            android:label="Editar perfil"/>
         <activity
             android:name=".activity.LoginActivity"
             android:exported="true">
@@ -29,11 +35,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.NovoUsuarioActivity"
-            android:exported="false"
-            android:theme="@style/ActionBarTheme"
-            android:label="Cadastro"/>
     </application>
-
 </manifest>
