--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.2'
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-compat:28.0.0'
+
+
 }
