--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        android.applicationVariants.all {
+            variant ->
+                variant.outputs.all {
+                    def appName = "diario-sono"
+                    outputFileName = appName+"-${variant.versionName}.apk"
+                }
+        }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
